# ChangeLog for x11-misc/rednotebook
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/rednotebook/ChangeLog,v 1.23 2009/12/19 13:35:41 hwoarang Exp $

  19 Dec 2009; Markos Chandras <hwoarang@gentoo.org>
  rednotebook-0.9.0.ebuild:
  Apply patch correctly this time

*rednotebook-0.9.0 (18 Dec 2009)

  18 Dec 2009; Markos Chandras <hwoarang@gentoo.org>
  +rednotebook-0.9.0.ebuild:
  Version bump

  21 Nov 2009; Markos Chandras <hwoarang@gentoo.org>
  rednotebook-0.7.5.ebuild, rednotebook-0.8.9-r1.ebuild:
  Update homepage URL

*rednotebook-0.8.9-r1 (20 Nov 2009)

  20 Nov 2009; Markos Chandras <hwoarang@gentoo.org>
  -rednotebook-0.8.6.ebuild, -rednotebook-0.8.7.ebuild,
  -rednotebook-0.8.9.ebuild, +rednotebook-0.8.9-r1.ebuild,
  +files/rednotebook-0.8.9_disable_spell.patch:
  Fix gtkspell-python automagic dependency ( bug #293765 ). Remove old
  ebuilds

*rednotebook-0.8.9 (09 Nov 2009)

  09 Nov 2009; <hwoarang@gentoo.org> +rednotebook-0.8.9.ebuild:
  Version bump

*rednotebook-0.8.7 (03 Oct 2009)

  03 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  -rednotebook-0.8.1.ebuild, -rednotebook-0.8.2.ebuild,
  -rednotebook-0.8.3.ebuild, +rednotebook-0.8.7.ebuild:
  Version bump, remove old ebuilds

*rednotebook-0.8.6 (13 Sep 2009)

  13 Sep 2009; Alex Alexander <wired@gentoo.org> +rednotebook-0.8.6.ebuild:
  version bump, bug 282863

*rednotebook-0.8.3 (10 Aug 2009)

  10 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
  +rednotebook-0.8.3.ebuild:
  Version bump

*rednotebook-0.8.2 (31 Jul 2009)

  31 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
  +rednotebook-0.8.2.ebuild:
  Version bump

  27 Jul 2009; <chainsaw@gentoo.org> rednotebook-0.7.5.ebuild:
  Marked stable on AMD64 as requested by Markos Chandras
  <hwoarang@gentoo.org> in bug #277861. Compile-tested on a Core2 Duo.

*rednotebook-0.8.1 (25 Jul 2009)

  25 Jul 2009; Markos Chandras <hwoarang@gentoo.org>