@@ -4,6 +4,6 @@ DIST rednotebook-0.8.9.tar.gz 325892 RMD160 8757cd7d83477159bde8b259943bb43ad7c3
 DIST rednotebook-0.9.0.tar.gz 344157 RMD160 bc316396dc6c066b333f1fe3c0496fb7d12c84d1 SHA1 dc99dadf577f24945a48ea076525609f4590e577 SHA256 f87dbbd02f950a3724cd7a5526a190ac51351f84ecad2027b9d7c896df67063a
 EBUILD rednotebook-0.7.5.ebuild 581 RMD160 4af5862be354e02422cf7eec68f254d2d36ea9e3 SHA1 e4a6e16fb467c3227e09878aa3e3090abde6e1bc SHA256 b60eedd50f62e37ae884f7703d5a15764cf03dac3404e4c966884bdd332c7a23
 EBUILD rednotebook-0.8.9-r1.ebuild 762 RMD160 44436da99bc67adc18091fc2cbd87fcc2e000bca SHA1 f317a3a597aac2bf04a15fe2a5693b39d9fdad37 SHA256 2fbcbf477404fffec15650b07f395ea7724b0600a42b4c4d08e97e0b57ed2dc3
-EBUILD rednotebook-0.9.0.ebuild 766 RMD160 2eaac064e77db0caeb559ae3f647f1561dc72b53 SHA1 77968388ee02cfb1e8be90acd3d8092e34ce77c8 SHA256 94e18076bd17b8aa2de8a6aeac8ef7c225dfcdd5c7a584f972fc380e5807b986
-MISC ChangeLog 4149 RMD160 f8baf7f3258803e87e667eceac64f91e44f42d0d SHA1 376f93b517cacbcace71bf856bd2fc260ca2e0fd SHA256 53c66feef90e142a6235d44580f1bad15b578e655f94289500c29b23bce77253
+EBUILD rednotebook-0.9.0.ebuild 765 RMD160 cedda7252755d68586af0a0f7186569a82e637e5 SHA1 bee9a47f6e7bdd98ac031efdda7265010626d126 SHA256 d1c88314113ac26034214c6ce65584480d1a82b6236fc84e5ff7ba728e02bbe2
+MISC ChangeLog 4247 RMD160 a134c6ab6aa4d4d1364974d6f20b2057d4a1ba5f SHA1 b3306ae27a5ef42bb02d5a29c38bb979f696f6dc SHA256 9f859af0731eded531f793d0ece63eef84331c30573801cc5d04e9e8ba774b23
 MISC metadata.xml 498 RMD160 da159e97d5705dc83a6bbf141c4fef87ae4e1794 SHA1 e42221002212743ec211614bf3e7a8e9dd6392b9 SHA256 c1d2b446557d3c653567ae65757eedf8e0dc7a5084b908eca1cba28a94b885ab
